# aoc-2024

./: .editorconfig  .gitignore  .gitmodules  build.gradle.kts  new.sh  settings.gradle.kts
KotlinDiscreteMathToolkit/: README.md
day01-fast/: .clang-format  .gitignore  CMakeLists.txt  day11.cpp  main.c  main.h  main_non_simd.c  sort_bindings.cpp  sort_bindings.h
src/: Day1.kt  Day10.kt  Day11.kt  Day12.kt  Day13.kt  Day14.kt  Day15.kt  Day16.kt  Day17.kt  Day18.kt  Day19.kt  Day2.kt  Day20.kt  Day25.kt  Day3.kt  Day4.kt  Day5.kt  Day6.kt  Day7.kt  Day8.kt  Day9.kt  Utils.kt
src/misc/: day 17 notes 2.txt  day 17 notes.txt
